# fastMC

./: .gitignore  AGENTS.md  Cargo.toml  GEMINI.md
account_manager/: Cargo.toml
account_manager/src/: lib.rs
config/: Cargo.toml
config/src/: lib.rs
config_manager/: Cargo.toml
config_manager/src/: lib.rs
java_manager/: Cargo.toml
java_manager/src/: detection.rs  lib.rs  settings.rs
launcher/: Cargo.toml
launcher/src/: lib.rs
microsoft_auth/: Cargo.toml
microsoft_auth/src/: authenticator.rs  errors.rs  lib.rs  models.rs  responses.rs
src/: account.rs  assets.rs  game.rs  instance_manager.rs  loader_installer.rs  main.rs  theme.rs
src/screens/: account.rs  instances.rs  java_manager.rs  loading.rs  mod.rs  modpacks.rs  play.rs  server.rs  settings.rs
version_manager/: Cargo.toml
version_manager/src/: fabric.rs  forge.rs  lib.rs  models.rs  neoforge.rs  quilt.rs  vanilla.rs
