[workspace]
resolver = "3"
members = ["account_manager","config", "launcher","microsoft_auth","java_manager"]

[package]
name = "fastmc"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version="0.14.0", features = ["svg"]}
microsoft_auth = {path = "./microsoft_auth"}
fastmc_config = {path = "./config"}
account_manager = {path = "./account_manager"}
directories = "5.0"
reqwest = {version = "0.11.24", features = ["json", "blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.10", features = ["v3", "v4", "v5", "serde"]}
md-5 = "0.10"
