[workspace]
resolver = "3"
members = ["account_manager","config_manager", "launcher","microsoft_auth","java_manager", "version_manager"]

[package]
name = "fastmc"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = {version="0.14.0", features = ["svg", "tokio", "image"]}
microsoft_auth = {path = "./microsoft_auth"}
config_manager = {path = "./config_manager"}
account_manager = {path = "./account_manager"}
java_manager = {path = "./java_manager"}
launcher = {path = "./launcher"}
version_manager = {path = "./version_manager"}
rfd = "0.14"
directories = "5.0"
reqwest = {version = "0.11.24", features = ["json", "blocking"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
uuid = {version = "1.10", features = ["v3", "v4", "v5", "serde"]}
md-5 = "0.10"
zip = "0.6"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "process"] }
image = "0.25.9"

# Optimize dependencies even in debug mode to speed up image decoding
[profile.dev.package."*"]
opt-level = 3
