[package]
name = "microsoft_auth"
version = "0.1.0"
edition = "2024"

[dependencies]
oauth2 = { version = "4.4", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.11.24", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
