[package]
name = "version_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] } # Default is async
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] } # Needed for tests if we want to run them
zip = "0.6"
